<resources>
    <string name="app_name">Deliverables</string>
    <string name="No_Permission">位置情報の許可をオンにしてください。オフでは使用することができません。</string>
    <string name="MemoryList">一覧</string>
    <string name="Save">保存</string>
    <string name="back">戻る</string>
    <string name="dialog_title">思い出を保存する</string>
    <string name="title">タイトル</string>
    <string name="Contents">内容</string>
    <string name="close">閉じる</string>
    <string name="save">保存</string>
</resources>