<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#59DFDB8D"
    app:layout_constraintDimensionRatio=""
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_title"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#616161"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="タイトルを入力してください"
        android:background="@color/white"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="LabelFor,SmallSp,SpeakableTextPresentCheck"
        android:textSize="12sp"
        android:inputType="text" />
    <TextView
        android:id="@+id/contentsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contents"
        android:textColor="#616161"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/contentsEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:autofillHints="内容"
        android:background="@color/white"
        android:ems="10"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="LabelFor,SmallSp,SpeakableTextPresentCheck"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/closeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/close"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle" />



    </LinearLayout>



</LinearLayout>